# bellforge

./: .RELEASE-DAY-CHECKLIST.md.kate-swp  .SRCINFO  .gitattributes  .gitignore  2026-05-16 - Kettlebell .md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PLAN.md  LICENSE  PKGBUILD  README.md  RELEASE-DAY-CHECKLIST.md  RELEASE.md  agent.md  bellforge.desktop
.github/workflows/: release.yml
bellforge-bin/: .SRCINFO  PKGBUILD
scripts/: release.sh
src/: main.rs  models.rs  persistence.rs  session.rs
